# An-implement-of-interpretable-model-based-on-ISIC2024-dataset

./: .gitignore  CLAUDE.md  LICENSE  README.md  dissertation_bristol_fyp.md  main.py  pyproject.toml  pytest.ini  requirements.txt
configs/: default.yaml
data/: README.md
outputs_scale/: summary_metrics_all_scales.csv
outputs_scale/benign_160000/: README_RESULTS.md  cohort_provenance.json  config_snapshot.yaml  correct_prediction_feature_summary.csv  correct_prediction_feature_summary.md
outputs_scale/benign_160000/case_studies/: case_studies.md
outputs_scale/benign_160000/glassbox_nam/: pipeline_meta.json  predictions_test.csv  test_metrics.json
outputs_scale/benign_160000/hard_cbm/: feature_audit.json  (+5 more)
outputs_scale/benign_40000/: README_RESULTS.md  cohort_provenance.json  config_snapshot.yaml  correct_prediction_feature_summary.csv  correct_prediction_feature_summary.md  splits.json
outputs_scale/benign_80000/: README_RESULTS.md  cohort_provenance.json  config_snapshot.yaml  correct_prediction_feature_summary.csv  correct_prediction_feature_summary.md  splits.json
outputs_scale/benign_full/: README_RESULTS.md  cohort_provenance.json  config_snapshot.yaml  correct_prediction_feature_summary.csv  correct_prediction_feature_summary.md
scripts/: download_isic2024.sh  make_dissertation_docx.py  make_report_docx.py  run_demo.sh  run_scale_experiment.py
src/glassderm/: __init__.py  _training_utils.py  artefacts.py  cli.py  config.py  scale.py
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_explanations.py  test_models.py
(+138 files in other folders)
